tests/negative/test_decl_glob_not_baked.orb
import "tests/io.orb";

let i32 x = scan_i32();

fnc main() {}